<resources>
    <string name="app_name">Dangerous Galaxy</string>
    <string name="txt_market">Market</string>
    <string name="txt_missions">Missions</string>
    <string name="txt_search">Search</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_fight">Fight</string>
    <string name="txt_escape">Escape</string>
    <string name="txt_break">Break through</string>
    <string name="txt_refuel">Refuel</string>
    <string name="txt_refueled">Refueled</string>
    <string name="txt_nomoney">Not enough money</string>
    <string name="txt_repair">Repair</string>
    <string name="txt_repaired">Repaired</string>
    <string name="txt_self_destruct">Self destruct</string>
    <string name="txt_shipyard">Shipyard</string>
    <string name="txt_buy">Buy</string>
    <array name="market">
        <item>Wheat;100</item>
        <item>Gold;100000</item>
    </array>
</resources>
