<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SpacePortActivity">

    <Button
        android:id="@+id/buttonMarket"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_market"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRefuel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_refuel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMarket" />

    <Button
        android:id="@+id/buttonRepair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_repair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRefuel" />

    <Button
        android:id="@+id/buttonShipyard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_shipyard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRepair" />

</androidx.constraintlayout.widget.ConstraintLayout>