<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BattleActivity">

    <TextView
        android:id="@+id/textPlayerShip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEnemyShip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPlayerShip" />

    <TextView
        android:id="@+id/textDemand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEnemyShip" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDemand" />

    <Button
        android:id="@+id/buttonFight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fight"
        app:layout_constraintStart_toEndOf="@+id/buttonSubmit"
        app:layout_constraintTop_toBottomOf="@+id/textDemand" />

    <Button
        android:id="@+id/buttonEscape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_escape"
        app:layout_constraintStart_toEndOf="@+id/buttonFight"
        app:layout_constraintTop_toBottomOf="@+id/textDemand" />

    <Button
        android:id="@+id/buttonBreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_break"
        app:layout_constraintStart_toEndOf="@+id/buttonEscape"
        app:layout_constraintTop_toBottomOf="@+id/textDemand" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEscape" />
</androidx.constraintlayout.widget.ConstraintLayout>